--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ nav a {
     text-decoration: none;
     padding: 0.5rem 1rem;
     font-weight: bold;
-    transition: color 0.3s ease;
+    transition: color 0.3s ease;    
 }
 nav li {
     list-style: none;
@@ -40,6 +40,10 @@ nav li {
 
 nav a:hover {
     color: var(--sky-blue);
+}
+.logo{
+    width: 30px;
+    height: auto;
 }
 
 /* Hero Section */
@@ -109,6 +113,9 @@ h1{
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
     overflow: hidden;
     transition: transform 0.3s ease;
+    color: inherit;
+    display: block; 
+    text-decoration: none; 
 }
 
 .card img {
@@ -118,22 +125,32 @@ h1{
 }
 
 .card-content {
+    display: flex;
     padding: 1rem;
+    align-items: center;
+    gap: 0.5rem; /* Add space between the icon and the text */
 }
 
 .card h3 {
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
-    color: var(--earth-brown);
+  
+    text-decoration: none;
+   
 }
+
+
 
 .card p {
     font-size: 1rem;
     color: var(--dark-text);
 }
 
+
 .card:hover {
     transform: translateY(-5px);
+    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+    background-color: #f9f9f9;
 }
 
 /* Admin Dashboard */
